--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -43,10 +43,12 @@ body {
 /* container1 */
 .cont1 {
     background-color: #303030;
+    display: flex;
+    flex-direction: column;
 }
 
 nav {
-    height: 20vh;
+    flex: 1 20%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -80,18 +82,18 @@ nav {
 }
 
 .header {
-    height: 80vh;
+    flex: 1 80%;
     display: flex;
     flex-direction: row;
     width: 100%;
 }
 
 .headertext {
-    width: 60%;
+    flex:1 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 1rem 3rem;
+    margin: 1rem 3rem;
 }
 
 .headertext h1 {
@@ -114,7 +116,12 @@ nav {
     line-height: 2rem;
     color: #fff;
     text-align: left;
-    padding: 0 5rem 0 0;
+    margin: 0 5rem 0 0;
+}
+
+.headerimg {
+    flex:1 50%;
+    position: relative;
 }
 
 .headerimg img {
@@ -137,14 +144,6 @@ nav {
     padding: 10px 19px;
 }
 
-.headerimg {
-    width: 40%;
-    position: relative;
-}
-
-.headerimg img:first-of-type {
-    width: 100%;
-}
 
 .headerimg .chat {
     width: 60px;
@@ -162,45 +161,40 @@ nav {
 
 .logo {
     width: 100px;
-    display: flex;
-    flex-direction: column;
+    mix-blend-mode: multiply;
+}
+.logo img{
+    width: 100%;
 }
 
+
 @media (max-width:1224px) {
-    nav {
-        height: 10vh;
-    }
 
     .header {
-        height: 90vh;
         flex-direction: column-reverse;
-        justify-content: space-between;
     }
 
     .headertext {
         width: 100%;
-        padding: 0 0 2rem 0;
-        /* height: 50vh; */
+        margin: 0 0 2rem 0;
     }
 
     .headertext p {
-        padding: 0;
+       margin: 0;
         text-align: center;
     }
 
     .headertext h1,
     .headertext h2 {
-        padding: 0;
+       margin: 0;
         text-align: center;
     }
 
     .headerimg {
         width: 100%;
-        /* height: 30vh; */
     }
 
     .headerimg img {
-        width: 10%;
     }
 
     .navbar {
@@ -298,12 +292,12 @@ nav {
 
 @media (min-width :768px) and (max-width : 1224px) {
   .headerimg img:first-of-type{
-    max-width: 700px;
+    /* max-width: 700px; */
   }
 }
 @media  (max-width :768px) {
   .headerimg img:first-of-type{
-    max-width: 600px;
+    /* max-width: 600px; */
   }
 }
 
